[package]
name = "waverave-hackrf-bin"
version = "0.1.0"
edition = "2024"

[dependencies]
waverave-hackrf = { path = "../waverave-hackrf" }
color-eyre = "0.6"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "sync",
    "fs",
    "io-util",
] }
