[package]
name = "waverave-hackrf-bin"
version = "0.0.2"
authors = ["Scott Teal <scott@teals.org>"]
edition = "2024"
readme = "README.md"
keywords = ["sdr", "hackrf"]
homepage = "https://github.com/Cognoscan/waverave"
repository = "https://github.com/Cognoscan/waverave"
documentation = "https://docs.rs/waverave-hackrf-bin"
license = "MIT OR Apache-2.0"
description = "Utilities for working with the HackRF SDR"


[dependencies]
waverave-hackrf = { version = "0.1.0", path = "../waverave-hackrf" }
color-eyre = "0.6"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "sync",
    "fs",
    "io-util",
] }
